@@ -8,6 +8,10 @@ Changelog
 4.0b1 - Unreleased
 ------------------
 
+- Adjust the tests now that `DateTime` objects are stored with a time zone.
+  Refs http://dev.plone.org/plone/ticket/10141
+  [witsch]
+
 - Fix issues with sliding modification/publishing dates by using `DateTime`'s
   `ISO8601` method instead of `ISO`, which doesn't include time zones.
   Refs http://dev.plone.org/plone/ticket/10140, 10141 & 10171.
